# tunein-tui

./: README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: META.tunein_tui  tunein_tui.dune-package  tunein_tui.install  tunein_tui.opam
_build/default/lib/: tunein_tui.cma  tunein_tui.cmxa  tunein_tui.cmxs
_build/default/lib/.merlin-conf/: lib-tunein_tui
_build/default/lib/.tunein_tui.objs/byte/: tunein_tui.cmi  tunein_tui.cmo  tunein_tui.cmt
_build/default/lib/actions/: tunein_tui_actions.cma  tunein_tui_actions.cmxa  tunein_tui_actions.cmxs  tunein_tui_actions.ml-gen
_build/default/lib/api_behavior/: tunein_tui_api_behavior.cma  tunein_tui_api_behavior.cmxa  tunein_tui_api_behavior.cmxs  tunein_tui_api_behavior.ml-gen
_build/default/lib/keybinds/: tunein_tui_keybinds.cma  tunein_tui_keybinds.cmxa  tunein_tui_keybinds.cmxs  tunein_tui_keybinds.ml-gen
_build/default/lib/types/: tunein_tui_types.cma  tunein_tui_types.cmxa  tunein_tui_types.cmxs  tunein_tui_types.ml-gen  types.ml
_build/default/lib/widgets/: logo.ml  my_library.ml  search_bar.ml  selector_window.ml  tunein_tui_widgets.cma  tunein_tui_widgets.cmxa  tunein_tui_widgets.cmxs  tunein_tui_widgets.ml-gen
_build/default/test/.merlin-conf/: exe-test_tunein_tui
_build/install/default/lib/tunein_tui/: META  opam  (+8 more)
lib/: dune
lib/actions/: actions.ml  dune
lib/api_behavior/: dune  search_for_stations.BACKUP  search_for_stations.ml
lib/keybinds/: dune
lib/types/: dune  types.ml
lib/widgets/: dune  logo.ml  my_library.ml  search_bar.ml  selector_window.ml
test/: dune
(+137 files in other folders)
